[package]
name = "json-web-token"
version = "0.2.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "JWT"
homepage = "https://github.com/WatchDG/rust-json-web-token"
documentation = "https://docs.rs/json-web-token"
repository = "https://github.com/WatchDG/rust-json-web-token"
readme = "README.md"
edition = "2021"
exclude = [
    ".github/**/*",
    "src/main.rs",
    ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
b64-url = { version = "0.5" }
digest = { version = "0.10" }
sha2 = { version = "0.10" }
hmac = { version = "0.12" }
bytes = { version = "1.4" }
lazy_static = { version = "1.4" }